// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Height > handles % value 1`] = `
{
  "classNames": [
    "_root_7f3504",
    [
      "_--type-literal_7f3504",
    ],
  ],
  "variables": {
    "--rs-h-s": "50%",
  },
}
`;

exports[`Styles/Height > handles px value 1`] = `
{
  "classNames": [
    "_root_7f3504",
    [
      "_--type-literal_7f3504",
    ],
  ],
  "variables": {
    "--rs-h-s": "50px",
  },
}
`;

exports[`Styles/Height > handles responsive value 1`] = `
{
  "classNames": [
    "_root_7f3504",
    [
      "_--type-literal_7f3504",
      "_--type-literal--l_7f3504",
    ],
  ],
  "variables": {
    "--rs-h-l": "50%",
    "--rs-h-s": "50px",
  },
}
`;

exports[`Styles/Height > handles undefined value 1`] = `null`;

exports[`Styles/Height > handles unit value 1`] = `
{
  "classNames": [
    "_root_7f3504",
    [
      "_--type-unit_7f3504",
    ],
  ],
  "variables": {
    "--rs-h-s": 5,
  },
}
`;
